@@ -76,6 +76,7 @@ target_link_libraries (gsmsd libGammu)
 if (NOT HAVE_STRPTIME)
     target_link_libraries (gsmsd strptime)
 endif (NOT HAVE_STRPTIME)
+target_link_libraries (gsmsd array)
 
 # Gammu-smsd program
 add_executable (gammu-smsd ${DAEMON_SRC})
